Add javaOpts and mainClass config properties